--- a/index.html
+++ b/index.html
@@ -3,15 +3,35 @@
   <head>
     <meta chaeset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./index.css" />
     <title>Namaste React</title>
   </head>
   <body>
     <div id="root"></div>
+    <script
+      crossorigin
+      src="https://unpkg.com/react@18/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+    ></script>
     <script>
-      const heading = document.createElement("h1");
-      heading.innerHTML = "Hello World from JavaScript!";
-      const root = document.getElementById("root");
-      root.appendChild(heading);
+      const heading = React.createElement("h1", { className: "heading" }, [
+        "Hello World from ",
+        React.createElement("span", { className: "span" }, "React JS!"),
+      ]);
+      const paragraph = React.createElement(
+        "p",
+        { className: "paragraph" },
+        "Lorem ipsum is simply a dummy text."
+      );
+      const container = React.createElement("div", { className: "container" }, [
+        heading,
+        paragraph,
+      ]);
+      const root = ReactDOM.createRoot(document.getElementById("root"));
+      root.render(container);
     </script>
   </body>
 </html>
